# Flutter-SDK-Desktop

./: .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: Runner.sln
example/windows/flutter/: GeneratedPlugins.props
example/windows/runner/: Runner.rc
lib/: agora_rtc_engine.dart  rtc_local_view.dart  rtc_render_view.dart
lib/src/: base.dart
macos/: agora_rtc_engine.podspec
macos/Classes/: AgoraRtcEnginePlugin.swift  AgoraTextureRender.h  AgoraTextureRender.mm
windows/: CMakeLists.txt  agora_rtc_engine_plugin.cpp  agora_rtc_engine_plugin.h  plugin.vcxproj  plugin.vcxproj.filters
